Use JUnitXml data model instead of plain xml processing
This PR uses JUnit xml library to replace the previously used plain xml processing.

Signed-off-by: Bo Zhang <bo@gradle.com>